# audio-capture

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  IMPLEMENTATION_SUMMARY.md  Makefile  QUICKSTART.md  README.md  TESTING.md  audio-detect-daemon.service  audio_detect_daemon.py  chrome_tab_diarizer.py  demo.py  install-daemon.sh  install-recorder.sh  process_recordings.py  pyproject.toml  teams-auto-recorder.service  teams_auto_recorder.py  test_basic.py  test_mcp.py
.claude/: settings.json
audio_detect/: __init__.py  cli.py  core.py  detectors.py  postprocess.py
audio_stream_transcriber/: __init__.py  audio_buffer.py  cli.py  config.py  stream_transcriber.py
docs/: daemon-installation.md
docs/adr/: 0001-simplify-teams-audio-capture.md
