[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "audio-stream-transcriber"
version = "0.1.0"
description = "Real-time audio streaming to Whisper MCP for live transcription"
authors = [{name = "Christian Geng"}]
dependencies = [
    "mcp>=1.17.0",
    "numpy",
    "python-dotenv",
    "typer[all]",
    "rich",
    "pyannote-audio>=4.0.3",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "torchaudio>=2.8.0",
    "pyyaml",
    "pyperclip",
]
requires-python = ">=3.10"

[project.scripts]
audio-stream = "audio_stream_transcriber.cli:app"
audio-detect = "audio_detect.cli:cli"
audio-detect-daemon = "audio_detect_daemon:main"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["E501"]
