[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "audio-stream-transcriber"
version = "0.1.0"
description = "Audio stream detection and capture tools"
authors = [{name = "Christian Geng"}]
dependencies = [
    "typer",
    "rich",
    "pyyaml",
    "pyperclip",
    "click",
    "websockets",
]
requires-python = ">=3.10"

[project.scripts]
audio-stream = "audio_stream_transcriber.cli:app"
audio-detect = "audio_detect.cli:cli"
audio-detect-daemon = "audio_detect_daemon:main"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["E501"]

[tool.hatch.build.targets.wheel]
packages = ["audio_detect"]
